[package]
name = "guild-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-gateway = { version = "0.11.0", features = ["simd-json", "zlib-simd"] }
futures-util = "0.3"
tokio = { version = "1.18.2", features = ["full"] }
rocket = "0.4.10"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]