[package]
name = "join-alerts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guild-counter"
path = "src/main.rs"

[dependencies]
twilight-gateway = { version = "0.11.0", features = ["simd-json", "zlib-simd"] }
futures-util = "0.3"
tokio = { version = "1.18.2", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"